--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -29,3 +29,9 @@ jobs:
       - run:
           name: Test
           command: NODE_ENV=test yarn run test --coverage
+      - run:
+          name: Build code
+          command: npm run build
+      - run:
+          name: Bundle code
+          command: npm run bundle
