--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react": "^16.12.0",
     "react-test-renderer": "^16.12.0",
     "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
     "webpack-dev-server": "^3.9.0"
   }
 }
