--- a/package.json
+++ b/package.json
@@ -56,14 +56,15 @@
     "@babel/preset-react": "^7.0.0",
     "babel-loader": "^8.0.6",
     "cross-env": "^5.0.5",
-    "flow-bin": "^0.56.0",
+    "flow-bin": "^0.112.0",
     "husky": "^3.0.9",
     "jest": "^24.9.0",
     "lint-staged": "^9.4.3",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
     "react-test-renderer": "^16.12.0",
-    "webpack": "^3.6.0",
-    "webpack-dev-server": "^2.9.1"
+    "webpack": "^4.41.2",
+    "webpack-cli": "^3.3.10",
+    "webpack-dev-server": "^3.9.0"
   }
 }
