--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "flow-bin": "^0.112.0",
     "husky": "^3.0.9",
     "jest": "^25.2.7",
+    "jest-junit": "^10.0.0",
     "lint-staged": "^9.4.3",
     "prettier": "^1.19.1",
     "react": "^16.12.0",
