Add Code Climate test coverage reporting

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,7 +28,15 @@ jobs:
           command: yarn run type-check
       - run:
           name: Test
-          command: NODE_ENV=test yarn run test --ci --coverage
+          command: yarn run test --ci --coverage --reporters=default --reporters=jest-junit
+      - run:
+          name: Setup Code Climate test-reporter
+          command: |
+            curl -L https://codeclimate.com/downloads/test-reporter/test-reporter-latest-linux-amd64 > ./cc-test-reporter && \
+            chmod +x ./cc-test-reporter
+      - run:
+          name: Collect test coverage
+          command: ./cc-test-reporter after-build -t lcov --debug
       - run:
           name: Build code
           command: npm run build
