--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,9 @@ coverage
 # nyc test coverage
 .nyc_output
 
+# Test report directory used by Jest-JUnit
+reports/
+
 # Grunt intermediate storage (http://gruntjs.com/creating-plugins#storing-task-files)
 .grunt
 
